// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio applies theme and custom styles 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      {
        "margin": 10,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 20,
          "width": 20,
        },
        {
          "borderColor": "blue",
          "borderWidth": 2,
        },
      ]
    }
    testID="amplify__radio-button__container"
  >
    <View
      style={
        [
          {
            "backgroundColor": "hsl(190, 95%, 30%)",
            "borderRadius": 999,
          },
          {
            "height": 12,
            "width": 12,
          },
          {
            "backgroundColor": "green",
          },
        ]
      }
      testID="amplify__radio-button__dot"
    />
  </View>
</View>
`;

exports[`Radio renders as expected when disabled 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 0.6,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    disabled
  </Text>
</View>
`;

exports[`Radio renders as expected when passing a number to the size prop 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 40,
          "width": 40,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  >
    <View
      style={
        [
          {
            "backgroundColor": "hsl(190, 95%, 30%)",
            "borderRadius": 999,
          },
          {
            "height": 24,
            "width": 24,
          },
          undefined,
        ]
      }
      testID="amplify__radio-button__dot"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    number
  </Text>
</View>
`;

exports[`Radio renders as expected when selected is false 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    false
  </Text>
</View>
`;

exports[`Radio renders as expected when selected is true 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  >
    <View
      style={
        [
          {
            "backgroundColor": "hsl(190, 95%, 30%)",
            "borderRadius": 999,
          },
          {
            "height": 12,
            "width": 12,
          },
          undefined,
        ]
      }
      testID="amplify__radio-button__dot"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    true
  </Text>
</View>
`;

exports[`Radio renders as expected when size is large 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 24,
          "width": 24,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  >
    <View
      style={
        [
          {
            "backgroundColor": "hsl(190, 95%, 30%)",
            "borderRadius": 999,
          },
          {
            "height": 14.399999999999999,
            "width": 14.399999999999999,
          },
          undefined,
        ]
      }
      testID="amplify__radio-button__dot"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    large
  </Text>
</View>
`;

exports[`Radio renders as expected when size is medium 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  >
    <View
      style={
        [
          {
            "backgroundColor": "hsl(190, 95%, 30%)",
            "borderRadius": 999,
          },
          {
            "height": 12,
            "width": 12,
          },
          undefined,
        ]
      }
      testID="amplify__radio-button__dot"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    medium
  </Text>
</View>
`;

exports[`Radio renders as expected when size is small 1`] = `
<View
  accessibilityRole="radio"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 16,
          "width": 16,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  >
    <View
      style={
        [
          {
            "backgroundColor": "hsl(190, 95%, 30%)",
            "borderRadius": 999,
          },
          {
            "height": 9.6,
            "width": 9.6,
          },
          undefined,
        ]
      }
      testID="amplify__radio-button__dot"
    />
  </View>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    small
  </Text>
</View>
`;

exports[`Radio renders as expected with accessibilityRole 1`] = `
<View
  accessibilityRole="none"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "hsl(210, 10%, 58%)",
          "borderRadius": 999,
          "borderWidth": 2,
          "justifyContent": "center",
          "margin": 4,
        },
        {
          "height": 20,
          "width": 20,
        },
        undefined,
      ]
    }
    testID="amplify__radio-button__container"
  />
</View>
`;
